<resources>
    <string name="app_name">폰바(Admin)</string>
    <string name="default_notification_channel_id">admin</string>
    <string name="msg_subscribed">구독 성공</string>
    <string name="msg_subscribe_failed">구독 실패</string>
    <string name="msg_unsubscribed">구독 해체</string>
    <string name="msg_unsubscribe_failed">구독 해제 실패</string>
    <string name="manager">간부</string>
    <string name="unit_select">부대 선택</string>
    <string name="select_unit">부대를 선택해주세요.</string>
    <string name="register">등록</string>
    <string name="unit">부대</string>
    <string name="error_loading_unit">유닛 정보를 불러오지 못했습니다.</string>
    <string name="register_failed">등록에 실패했습니다.</string>
    <string name="log_load_failed">로그를 불러올 수 없습니다.</string>
    <string name="logout_failed">로그아웃에 실패하였습니다.</string>
    <string name="alarm_log">알림 로그</string>
    <string name="sync">동기화</string>
    <string name="show_all">전체보기</string>
    <string name="show_checked_log">확인 로그 보기</string>
    <string name="show_unchecked_log">비확인 로그 보기</string>
    <string name="log_out">로그아웃</string>
    <string name="checked">확인</string>
    <string name="unchecked">비확인</string>
    <string name="unit_crew_list">부대원 목록</string>
    <string name="soldier_load_failed">부대원 정보를 가져올 수 없습니다.</string>
    <string name="state_change_failed">상태 변경에 실패했습니다.</string>
    <string name="state_change_success">변경되었습니다.</string>
    <string name="log_list">로그 목록</string>
    <string name="log_failed">로그를 불러오지 못했습니다.</string>
    <string name="booting">부팅</string>
    <string name="service_start">서비스 실행</string>
    <string name="shut_down">종료</string>
</resources>
