<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_menu"
        android:enabled="true"
        android:icon="@drawable/ic_sync_white"
        android:title="@string/sync"
        app:showAsAction="withText" />

    <item
        android:id="@+id/show_all_menu"
        android:enabled="true"
        android:title="@string/show_all"
        app:showAsAction="withText" />


    <item
        android:id="@+id/show_checked_menu"
        android:enabled="true"
        android:title="@string/show_checked_log"
        app:showAsAction="withText" />


    <item
        android:id="@+id/show_unchecked_menu"
        android:enabled="true"
        android:title="@string/show_unchecked_log"
        app:showAsAction="withText" />

    <item
        android:id="@+id/log_out_menu"
        android:enabled="true"
        android:title="@string/log_out"
        app:showAsAction="withText" />

</menu>