<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/log_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_radius_top_20dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/line_gray5_3dp" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            tools:text="정종우"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/line_gray5_3dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/boot_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/booting"
               />

            <CheckBox
                android:id="@+id/service_start_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_start"
                android:checked="true"
                android:layout_marginStart="10dp"
               />

            <CheckBox
                android:id="@+id/shutdown_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_marginStart="10dp"
                android:text="@string/shut_down"
               />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/log_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>