<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.signin.SignInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unit_select"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unit_select_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:text="@string/select_unit"
            android:textSize="25sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/unit_card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_radius_top_20dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/line_gray5_3dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="title" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:src="@drawable/line_gray5_3dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rect_cardview_radius_20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="검색"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/bg_rect_gray3"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/recycler_view_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:textColor="@color/blue"
                android:text="@string/unit" />


        </LinearLayout>


        <kr.osam.admin.ui.koreanindexer.KoreanIndexerRecyclerView
            android:id="@+id/bottom_sheet_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:clipChildren="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:indexerBackground="@color/blue11"
            app:indexerMargin="0"
            app:indexerRadius="60"
            app:indexerTextColor="@color/white"
            app:indexerWidth="20"
            app:sectionBackground="@color/blue11"
            app:sectionDelay="1000"
            app:sectionTextColor="@color/white"
            app:useSection="true" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>